# pocketsphinx_ros

./: CMakeLists.txt  CMakeLists.txt~  README.md  Readme.md  package.xml  package.xml~  setup.py
Grammar/Stage1/: Stage2gpsr.dic  Stage2gpsr.jsgf
Grammar/Stage1/GPSR/: Stage2gpsr.dic  Stage2gpsr.jsgf  gpsr_great.jsgf  gpsr_ii.dic  gpsr_ii.jsgf  gpsr_ii_old.jsgf  gpsr_lite.dic  gpsr_lite.jsgf  gpsr_lite_lc.jsgf  gpsr_very_lite.dic  gpsr_very_lite.jsgf
Grammar/Stage1/SPR/: questions.dic  questions.fsg  questions.jsgf  questions.word  questions.words
Grammar/conf/: confirmation.jsgf  confirmation.lm
Grammar/demos/: simple.dic  simple.jsgf
Grammar/restaurant/: confirmation.dic  confirmation.jsgf  delete.dic  delete.jsgf  goto.dic  goto.jsgf  guide.dic  guide.jsgf  nav.dic  nav.jsgf  operation.dic  operation.jsgf  save.dic  save.jsgf  slam.dic  slam.jsgf
action/: DoRecognition.action
cfg/: SpeechRecognition.cfg
cmake/: FindPocketSphinx.cmake  FindSphinxBase.cmake
config/: recognition_params.yaml  recognizer.yaml
include/pocketsphinx_ros/: AudioSource.h  AudioSoure.hpp  Exceptions.h  Recognizer.h  Recognizer.hpp  RecognizerROS.h  RecognizerROS.hpp
include/uchile_speech_pocketsphinx/: AudioSource.h  Exceptions.h  Recognizer.h  RecognizerROS.h
install/: install.sh  install_recognizer.sh
launch/: recognizer.launch
scripts/: hwcheck_mic.py
scripts/hwcheck/: mic_check.py
shell/: setup.sh
src/: AudioSource.cpp  Exceptions.cpp  Recognizer.cpp  RecognizerROS.cpp  open_device_error.cpp  recognizer.cpp  recognizeralfa.cpp  recognizerbeta.cpp  recognizergamma.cpp  recorder.py  test_record.py  tester.cpp  tester2.py  testmics.py  untitled.cpp
srv/: RecognitionOrder.srv
utils/: create_dictionary.sh  fsg2wlist.pl  list_sources.sh
